<resources>
    <string name="app_name">My Workout</string>


    <string name="userAccount">Kontonavn</string>
    <string name="deleteAccount">Slett konto</string>
    <string name="userName">Brukernavn</string>
    <string name="editUserName">Endre brukernavn</string>
    <string name="logout">Logg ut</string>
    <string name="changePhoneNumber">Endre telefonnummer</string>
    <string name="editPhoneNumber">Endre telefonnummer</string>
    <string name="editEmail">Endre e-postadresse</string>
    <string name="editBirthYear">Endre fødselsår</string>
    <string name="editUser">Endre brukerinfo</string>
    <string name="hintProgramType">Program type</string>
    <string name="hintUserId">Bruker id</string>
    <string name="hintName">Navn på program</string>
    <string name="hintDescription">Beskrivelse</string>
    <string name="hintTiming">Bruk tidtaking?</string>
    <string name="btnAddUserProgram">Legg til program</string>
    <string name="btnAddNewExercise">Legg til ny øvelse</string>
    <string name="btnAddExerciseFromList">Legg til eksisterende øvelse</string>
    <string name="hintExerciseName">Navn på øvelse</string>
    <string name="hintExerciseDescription">Beskrivelse</string>
    <string name="hintIcon">Ikon (tekst, navn på .png-fil)</string>
    <string name="hintInfoboxColor">Farge (f.eks. #FE0980)</string>
    <string name="btnAddToUserProgram">Legg øvelse til program</string>
    <string name="toUserPrograms">Vis treningsprogrammer</string>
    <string name="toSessions">Vis økter</string>
    <string name="btnAddNewSession">Registrer ny treningsøkt</string>
    <string name="addSessionTimeSpent">Tid brukt (minutter)</string>
    <string name="addSessionDescription">Beskrivelse</string>
    <string name="addSessionExtra">Ekstra info</string>
    <string name="btnAddSession">Legg til økt</string>
    <string name="btnEditUserProgram">Endre program</string>
    <string name="btnAddExercise">Legg til øvelse</string>
    <string name="btnEditExercise">Endre øvelse</string>
    <string name="stats">STATISTIKK:</string>
    <string name="toProgramTypes">Vis programtyper</string>
    <string name="btnAddProgramType">Legg til programtype</string>
    <string name="programTypeAddDescription">Beskrivelse</string>
    <string name="programTypeAddIcon">Bilde (tekst, navn på .png-fil)</string>
    <string name="programTypeAddBackColor">Bakgrunnsfarge (tekst, f.eks. #FE0980)</string>
    <string name="editProgramType">Endre programtype</string>
    <string name="titleExercise">Øvelse</string>
    <string name="titleLogin">Innlogging</string>
    <string name="titleMain">Hovedside</string>
    <string name="titleProgramTypes">Programtyper</string>
    <string name="titleSessions">Økter</string>
    <string name="titleUser">Din bruker</string>
    <string name="titleUserProgram">Treningsprogram</string>
    <string name="titleUserPrograms">Treningsprogrammer</string>
    <string name="minutes">minutter</string>
    <string name="home">Hjem</string>
    <string name="home_user">Bruker</string>
    <string name="accountName">Kontonavn</string>
    <string name="phoneNumber">Telefonnr.</string>
    <string name="email">E-post</string>
    <string name="birthYear">Fødselsår</string>
    <string name="update">Oppdater</string>
    <string name="titleGallery">Velg ikon</string>
    <string name="btnAddIcon">Velg ikon</string>
    <string name="btnSelectDifferentIcon">Velg annet ikon</string>




</resources>
