<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddExerciseFragment">


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/selectedImage" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddIcon"
        android:text="@string/btnAddIcon"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddName"
        android:hint="@string/hintExerciseName">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddDescription"
        android:hint="@string/hintExerciseDescription"></EditText>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddInfoboxColor"
        android:hint="@string/hintInfoboxColor"></EditText>


<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnAddNewExercise"
    android:text="@string/btnAddExercise"></Button>


</LinearLayout>