<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="3"
    android:orientation="horizontal"
    tools:context=".UserFragment">


    <TextView

        android:id="@+id/tvUserAccount"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/userAccount"/>

    <TextView

        android:id="@+id/tvAccountName"
        android:layout_column="1"
        android:layout_row="0"
        android:text="Account name..."

    />


    <Button

        android:id="@+id/btnDeleteAccount"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/deleteAccount"


        ></Button>

   <TextView

       android:id="@+id/tvUserName"
       android:layout_column="0"
       android:layout_row="1"
       android:text="@string/userName"></TextView>


    <TextView

        android:id="@+id/tvUserNameText"
        android:layout_column="1"
        android:layout_row="1"
        android:text="Username..."
        ></TextView>

    <Button

        android:id="@+id/btnChangeUserName"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/editUserName"></Button>

    <Button

        android:id="@+id/btnLogout"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/logout"></Button>


</GridLayout>