<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditUserProgramFragment">

    <Spinner
        android:id="@+id/spinner_edit_program_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editProgramName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintName" />
    <EditText
        android:id="@+id/editProgramDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintDescription" />

    <CheckBox
        android:id="@+id/editTiming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintTiming" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditUserProgram"
        android:text="@string/btnEditUserProgram"/>

</LinearLayout>