<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddSessionFragment">

    <Spinner
        android:id="@+id/spinner_userPrograms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDatePicker"
        android:text="Velg dato"></EditText>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddSessionTimeSpent"
        android:inputType="numberDecimal"
        android:hint="@string/addSessionTimeSpent"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddSessionDescription"
        android:hint="@string/addSessionDescription"></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddSessionExtra"
        android:hint="@string/addSessionExtra"></EditText>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btnAddSession"
    android:text="@string/btnAddSession"></Button>

</LinearLayout>